@@ -1,5 +1,6 @@
 LATEST
 -------------------------------
+- added NameUtility.shortcutName()
 
 ehibasics 1.3.0 (2020-03-30)
 -------------------------------
